// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. video 1`] = `
<View
  style={
    Object {
      "height": 200,
      "width": 300,
    }
  }
>
  <Image
    style={
      Object {
        "height": 200,
        "width": 300,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "height": 200,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 300,
        "zIndex": 2,
      }
    }
  >
    <View>
      <Svg>
        <Rect />
        <Rect />
        <Polygon />
      </Svg>
    </View>
  </View>
</View>
`;

exports[`2. video without a poster image 1`] = `
<View
  style={
    Object {
      "height": 200,
      "width": 300,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "black",
        "height": 200,
        "width": 300,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "height": 200,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 300,
        "zIndex": 2,
      }
    }
  >
    <View>
      <Svg>
        <Rect />
        <Rect />
        <Polygon />
      </Svg>
    </View>
  </View>
</View>
`;

exports[`3. sky sports video 1`] = `
<View
  style={
    Object {
      "height": 200,
      "width": 300,
    }
  }
>
  <OverlayGradient
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "height": 40,
        "justifyContent": "space-between",
        "left": 0,
        "paddingHorizontal": 5,
        "position": "absolute",
        "top": 0,
        "width": "100%",
        "zIndex": 3,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "GillSansMTStd-Medium",
          "fontSize": 11,
          "lineHeight": undefined,
          "marginTop": 10,
        }
      }
    >
      Premier League clips powered by Sky Sports
    </Text>
    <Image
      style={
        Object {
          "height": 17,
          "marginTop": 7,
          "width": 80,
        }
      }
    />
  </OverlayGradient>
  <Image
    style={
      Object {
        "height": 200,
        "width": 300,
      }
    }
  />
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "height": 200,
        "justifyContent": "center",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 300,
        "zIndex": 2,
      }
    }
  >
    <View>
      <Svg>
        <Rect />
        <Rect />
        <Polygon />
      </Svg>
    </View>
  </View>
</View>
`;
